Refactor receipt parsing and fix statistics dates
Improves receipt extraction reliability by precompiling regex patterns (including case-insensitive energy matching), centralizing parsing helpers, and simplifying update/delete flows with clearer validation and Optional handling. Receipt creation from extracted text now uses structured service definitions, batch persistence, and shared statistic updates.

Fixes a statistics bug caused by inconsistent date parsing from Date.toString() by converting Date values directly to LocalDate, and reuses this path for month labels and monthly aggregations. Also cleans up PDF report generation with safer resource handling, modernized imports/types, and structured logging.