@@ -1,6 +1,5 @@
 package proyecto.web.serviceguideBackend.statistic;
 
-import com.itextpdf.io.exceptions.IOException;
 import com.itextpdf.kernel.colors.DeviceRgb;
 import com.itextpdf.kernel.pdf.canvas.draw.SolidLine;
 import com.itextpdf.layout.borders.SolidBorder;
@@ -15,7 +14,7 @@ import com.itextpdf.layout.properties.BorderRadius;
 import com.itextpdf.layout.properties.TextAlignment;
 import com.itextpdf.layout.properties.UnitValue;
 import lombok.RequiredArgsConstructor;
-import org.apache.tomcat.util.http.fileupload.ByteArrayOutputStream;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -37,14 +36,15 @@ import proyecto.web.serviceguideBackend.statistic.statisticType.StatisticType;
 import proyecto.web.serviceguideBackend.user.User;
 import proyecto.web.serviceguideBackend.user.interfaces.UserRepository;
 
+import java.io.ByteArrayOutputStream;
 import java.text.SimpleDateFormat;
 import java.time.*;
-import java.time.format.DateTimeFormatter;
 import java.time.format.TextStyle;
 import java.util.*;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+@Slf4j
 @RequiredArgsConstructor
 @Service
 public class StatisticService implements StatisticInterface {
@@ -59,61 +59,58 @@ public class StatisticService implements StatisticInterface {
     public StatisticDto individualReceipt(String typeReceipt, Long idReceipt, String typeGraphic) {
         List<Statistic> statistics = statisticRepository.getStatisticByReceipt(idReceipt);
         if (!statistics.isEmpty()) {
+            // El código original recorría toda la lista sobrescribiendo el mismo
+            // StatisticDto en cada vuelta; al final solo sobrevivían los valores
+            // del último elemento. Es exactamente lo mismo que tomar el último
+            // directamente, sin el trabajo extra de O(n).
+            Statistic lastStatistic = statistics.get(statistics.size() - 1);
             StatisticDto statisticDto = new StatisticDto();
-            List<Double[]> prices = new ArrayList<>();
-            List<Float[]> amount = new ArrayList<>();
-            List<String[]> label = new ArrayList<>();
-            for (int i = 0; i < statistics.size(); i++) {
-                prices.add(statistics.get(i).getPrice());
-                amount.add(statistics.get(i).getAmount());
-                label.add(statistics.get(i).getLabel());
-
-                statisticDto.setPrice(prices.get(i));
-                statisticDto.setAmount(amount.get(i));
-                statisticDto.setLabel(label.get(i));
-                statisticDto.setId(statistics.get(i).getId());
-                statisticDto.setStatisticsType(statistics.get(i).getStatisticsType());
-            }
+            statisticDto.setPrice(lastStatistic.getPrice());
+            statisticDto.setAmount(lastStatistic.getAmount());
+            statisticDto.setLabel(lastStatistic.getLabel());
+            statisticDto.setId(lastStatistic.getId());
+            statisticDto.setStatisticsType(lastStatistic.getStatisticsType());
             return statisticDto;
         }
 
-        Optional<Receipt> optionalReceipt = receiptRepository.findById(idReceipt);
-        if (optionalReceipt.isEmpty()) {
-            throw new AppException("Receipt not found", HttpStatus.NOT_FOUND);
-        }
+        Receipt currentReceipt = receiptRepository.findById(idReceipt)
+                .orElseThrow(() -> new AppException("Receipt not found", HttpStatus.NOT_FOUND));
+
         Long idUser = receiptRepository.findUserByReceiptId(idReceipt);
-        Optional<User> optionalUser = userRepository.findById(idUser);
-        if (optionalUser.isEmpty()) {
-            throw new AppException("User not found", HttpStatus.NOT_FOUND);
-        }
+        User user = userRepository.findById(idUser)
+                .orElseThrow(() -> new AppException("User not found", HttpStatus.NOT_FOUND));
+
         TypeService typeService = TypeService.valueOf(typeReceipt);
-        List<Long> collectionId = receiptRepository.getIdByUser(optionalUser.get().getId(), typeService);
+        List<Long> collectionId = receiptRepository.getIdByUser(user.getId(), typeService);
+
         /*Se declara el array y se extraen 2 id*/
-        List<Double> idList = new ArrayList<>();
+        List<Long> idList = new ArrayList<>();
         for (int i = 0; i < 2 && i < collectionId.size(); i++) {
-            idList.add(Double.valueOf(collectionId.get(i)));
+            idList.add(collectionId.get(i));
         }
+
         /*Se verifica si la lista tiene solo un dato y si es verdadero lanza una excepcion*/
         if (idList.size() == 1) {
             throw new AppException("Recibo creado pero no se puede generar la estadistica", HttpStatus.OK);
         }
-        List<Receipt> receiptList = receiptRepository.getTwoReceiptsById(idList.get(0).longValue(), idList.get(1).longValue());
+
+        List<Receipt> receiptList = receiptRepository.getTwoReceiptsById(idList.get(0), idList.get(1));
 
         Double[] price = {receiptList.get(0).getPrice(), receiptList.get(1).getPrice()};
         Float[] amount = {receiptList.get(0).getAmount(), receiptList.get(1).getAmount()};
 
-        /*Se extrae el mes y se pone la primera letra en Mayuscula*/
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("E MMM dd HH:mm:ss z yyyy", Locale.ENGLISH);
-        String dateStr1 = String.valueOf(receiptList.get(0).getDate());
-        LocalDate date1 = LocalDate.parse(dateStr1, formatter);
-        String monthName1 = date1.getMonth().getDisplayName(TextStyle.FULL, Locale.forLanguageTag("es-ES"));
-        String monthCapitalize1 = monthName1.substring(0, 1).toUpperCase() + monthName1.substring(1);
-
-        String dateStr2 = String.valueOf(receiptList.get(1).getDate());
-        LocalDate date2 = LocalDate.parse(dateStr2);
-        String monthName2 = date2.getMonth().getDisplayName(TextStyle.FULL, Locale.forLanguageTag("es-ES"));
-        String monthCapitalize2 = monthName2.substring(0, 1).toUpperCase() + monthName2.substring(1);
-
+        /*
+         * BUG corregido: la fecha del primer recibo se parseaba con un
+         * DateTimeFormatter que coincide con Date.toString() ("E MMM dd
+         * HH:mm:ss z yyyy"), pero la del segundo recibo se parseaba con
+         * LocalDate.parse(str) SIN formatter, que solo acepta el formato ISO
+         * "yyyy-MM-dd". Como Date.toString() nunca produce ese formato, esa
+         * línea lanzaba DateTimeParseException prácticamente siempre que se
+         * llegaba a generar una estadística nueva. Ahora ambas fechas se
+         * convierten directamente desde java.util.Date, sin pasar por texto.
+         */
+        String monthCapitalize1 = capitalizedSpanishMonth(receiptList.get(0).getDate());
+        String monthCapitalize2 = capitalizedSpanishMonth(receiptList.get(1).getDate());
         String[] label = {monthCapitalize1, monthCapitalize2};
 
         StatisticType statisticType = StatisticType.valueOf(typeGraphic);
@@ -126,12 +123,9 @@ public class StatisticService implements StatisticInterface {
         statistic.setStatisticsType(statisticType);
         statisticRepository.save(statistic);
 
-        List<Statistic> statisticList = new ArrayList<>();
-        statisticList.add(statistic);
-        optionalReceipt.get().setStatistics(statisticList);
-        Receipt receipt = optionalReceipt.get();
-        receipt.setStatistics(statisticList);
-        receiptRepository.save(receipt);
+        currentReceipt.setStatistics(List.of(statistic));
+        receiptRepository.save(currentReceipt);
+
         return statisticMapper.statisticDto(statistic);
     }
 
@@ -143,15 +137,11 @@ public class StatisticService implements StatisticInterface {
             throw new AppException("No se encontraron recibos", HttpStatus.NOT_FOUND);
         }
 
-        Optional<User> optionalUser = userRepository.findById(idUser);
-        if (optionalUser.isEmpty()) {
-            throw new AppException("User not found", HttpStatus.NOT_FOUND);
-        }
+        User user = userRepository.findById(idUser)
+                .orElseThrow(() -> new AppException("User not found", HttpStatus.NOT_FOUND));
 
-        Optional<House> optionalHouse = houseRepository.findByUserAndName(optionalUser.get(), house);
-        if (optionalHouse.isEmpty()) {
-            throw new AppException("House not found", HttpStatus.NOT_FOUND);
-        }
+        houseRepository.findByUserAndName(user, house)
+                .orElseThrow(() -> new AppException("House not found", HttpStatus.NOT_FOUND));
 
         double waterSum = 0;
         double energySum = 0;
@@ -160,9 +150,7 @@ public class StatisticService implements StatisticInterface {
 
         for (Receipt receipt : receipts) {
             double receiptAmount = receipt.getAmount().doubleValue();
-            String typeServiceName = receipt.getTypeService().name();
-
-            switch (typeServiceName) {
+            switch (receipt.getTypeService().name()) {
                 case "WATER" -> waterSum += receiptAmount;
                 case "ENERGY" -> energySum += receiptAmount;
                 case "GAS" -> gasSum += receiptAmount;
@@ -170,44 +158,31 @@ public class StatisticService implements StatisticInterface {
             }
         }
 
-        // Crear un array de double y almacenar las sumas por tipo
-
-        return new double[]{ waterSum, energySum, gasSum, sewerageSum };
+        return new double[]{waterSum, energySum, gasSum, sewerageSum};
     }
 
     @Override
     public SumOfReceiptDto sumOfReceiptDto(Long idHouse) {
-        Optional<House> optionalHouse = houseRepository.findById(idHouse);
-        if (optionalHouse.isEmpty()) {
-            throw new AppException("Casa no encontrada", HttpStatus.NOT_FOUND);
-        }
-        Collection<Receipt> receiptList = receiptRepository.findByHouse(optionalHouse.get());
-        List<YearMonth> yearMonths = new ArrayList<>();
+        House house = houseRepository.findById(idHouse)
+                .orElseThrow(() -> new AppException("Casa no encontrada", HttpStatus.NOT_FOUND));
 
-        for (Receipt receipt : receiptList) {
-            Date receiptDate = receipt.getDate();
-            Date utilDate = new Date(receiptDate.getTime());
-            Instant instant = utilDate.toInstant();
-            LocalDate localDate = instant.atZone(ZoneId.systemDefault()).toLocalDate();
-            YearMonth yearMonth = YearMonth.of(localDate.getYear(), localDate.getMonth());
-            yearMonths.add(yearMonth);
-        }
+        Collection<Receipt> receiptList = receiptRepository.findByHouse(house);
 
-        Comparator<YearMonth> customComparator = Comparator
+        Comparator<YearMonth> byYearThenMonth = Comparator
                 .comparing(YearMonth::getYear)
                 .thenComparing(YearMonth::getMonthValue);
 
-        List<YearMonth> sortedYearMonths = yearMonths.stream()
+        List<YearMonth> sortedYearMonths = receiptList.stream()
+                .map(receipt -> toLocalDate(receipt.getDate()))
+                .map(localDate -> YearMonth.of(localDate.getYear(), localDate.getMonth()))
                 .distinct()
-                .sorted(customComparator)
-                .collect(Collectors.toList());
+                .sorted(byYearThenMonth)
+                .toList();
+
+        SumOfReceiptDto sumOfReceiptDto = new SumOfReceiptDto();
 
         if (sortedYearMonths.size() == 1) {
-            double sumPriceLatest = 0D;
-            for (Receipt receipt : receiptList) {
-                sumPriceLatest += receipt.getPrice();
-            }
-            SumOfReceiptDto sumOfReceiptDto = new SumOfReceiptDto();
+            double sumPriceLatest = receiptList.stream().mapToDouble(Receipt::getPrice).sum();
             sumOfReceiptDto.setSumMonth((float) sumPriceLatest);
             sumOfReceiptDto.setPercentage(0F);
             sumOfReceiptDto.setDifference(0F);
@@ -217,27 +192,24 @@ public class StatisticService implements StatisticInterface {
 
         double sumPriceLatest = 0D;
         double sumPriceLast = 0D;
-        double percentage;
-        double difference;
 
         // Obtener los últimos dos elementos de la lista ordenada
         List<YearMonth> lastTwoMonths = sortedYearMonths.subList(Math.max(0, sortedYearMonths.size() - 2), sortedYearMonths.size());
 
         for (int i = 0; i < lastTwoMonths.size(); i++) {
-            Collection<Receipt> list = receiptRepository.listReceiptByHouseAndMonthAndYear(idHouse, lastTwoMonths.get(i).getMonthValue(), lastTwoMonths.get(i).getYear());
-            for (Receipt receipt : list) {
-                if (i == 0) {
-                    sumPriceLast += receipt.getPrice();
-                } else {
-                    sumPriceLatest += receipt.getPrice();
-                }
+            Collection<Receipt> list = receiptRepository.listReceiptByHouseAndMonthAndYear(
+                    idHouse, lastTwoMonths.get(i).getMonthValue(), lastTwoMonths.get(i).getYear());
+            double sum = list.stream().mapToDouble(Receipt::getPrice).sum();
+            if (i == 0) {
+                sumPriceLast += sum;
+            } else {
+                sumPriceLatest += sum;
             }
         }
 
-        difference = sumPriceLast - sumPriceLatest;
-        percentage = (difference / sumPriceLast) * 100;
+        double difference = sumPriceLast - sumPriceLatest;
+        double percentage = (difference / sumPriceLast) * 100;
 
-        SumOfReceiptDto sumOfReceiptDto = new SumOfReceiptDto();
         sumOfReceiptDto.setSumMonth((float) sumPriceLatest);
         sumOfReceiptDto.setDifference((float) difference);
         sumOfReceiptDto.setLastSumMonth((float) sumPriceLast);
@@ -248,54 +220,42 @@ public class StatisticService implements StatisticInterface {
 
     @Override
     public ResponseEntity<ByteArrayResource> generateReportPDF(Long userId, Long houseId) {
-        try {
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
 
-            // Crear el documento PDF
-            PdfWriter writer = new PdfWriter(baos);
-            PdfDocument pdf = new PdfDocument(writer);
-            Document document = new Document(pdf);
+        // try-with-resources: el Document cierra en cascada el PdfDocument y el
+        // PdfWriter. Antes, si algo lanzaba una excepción a mitad del reporte,
+        // document.close() nunca se ejecutaba y el recurso quedaba sin cerrar.
+        try (Document document = new Document(new PdfDocument(new PdfWriter(baos)))) {
+            PdfDocument pdf = document.getPdfDocument();
 
-            // Agregar el título del informe
             Paragraph title = new Paragraph("REPORTE ESTADÍSTICO");
             title.setTextAlignment(TextAlignment.CENTER);
             document.add(title);
-
-            // Agregar espacio
             document.add(new Paragraph("\n"));
 
-            // Agregar el subtítulo con la fecha a la derecha
             Paragraph subtitle = new Paragraph("Fecha: " + obtenerFechaActual());
             subtitle.setTextAlignment(TextAlignment.RIGHT);
             document.add(subtitle);
-
             document.add(new Paragraph("\n"));
 
-            Paragraph subtitleInformation = new Paragraph("Información de evaluación");
-            document.add(subtitleInformation);
-
+            document.add(new Paragraph("Información de evaluación"));
             document.add(new Paragraph("\n"));
 
-            // Agregar el cuadro con la frase centrada
             DeviceRgb borderColor = new DeviceRgb(10, 152, 197);
             Table tableParagraph = new Table(UnitValue.createPercentArray(new float[]{200f}));
-            Cell cell_1 = new Cell().add(new Paragraph("La información que encontrará a continuación fue tomada teniendo en cuenta los siguiente datos"));
-            cell_1.setTextAlignment(TextAlignment.CENTER);
-            cell_1.setBorderRadius(new BorderRadius(10));
-            cell_1.setBorder(new SolidBorder(borderColor, 2));
-            tableParagraph.addCell(cell_1);
-
+            Cell infoCell = new Cell().add(new Paragraph(
+                    "La información que encontrará a continuación fue tomada teniendo en cuenta los siguiente datos"));
+            infoCell.setTextAlignment(TextAlignment.CENTER);
+            infoCell.setBorderRadius(new BorderRadius(10));
+            infoCell.setBorder(new SolidBorder(borderColor, 2));
+            tableParagraph.addCell(infoCell);
             document.add(tableParagraph);
-
             document.add(new Paragraph("\n"));
 
-            // Agregar tabla con la informacaión de los recibos
             List<Receipt> lastTwoMonthsReceipts = obtenerUltimosRecibos(userId, houseId);
             agregarTablaRecibos(document, lastTwoMonthsReceipts);
-
             document.add(new Paragraph("\n"));
 
-            // Agregar el título del informe
             Paragraph logo = new Paragraph("ServiceGuide");
             Paragraph slogan = new Paragraph("'Producción y consumo responsable'");
             logo.setTextAlignment(TextAlignment.CENTER);
@@ -303,52 +263,36 @@ public class StatisticService implements StatisticInterface {
             document.add(logo);
             document.add(slogan);
 
-            // Agregar línea después del título
-            DeviceRgb deviceRgb = new DeviceRgb(10, 152, 197);
+            DeviceRgb lineColor = new DeviceRgb(10, 152, 197);
             SolidLine solidLine = new SolidLine(2);
-            solidLine.setColor(deviceRgb);
+            solidLine.setColor(lineColor);
+            document.add(new LineSeparator(solidLine));
 
-            LineSeparator line = new LineSeparator(solidLine);
-
-            document.add(line);
-
-            //NUEVA PÁGINA
             pdf.addNewPage();
-
             document.add(title);
 
-            
-
-            document.close();
-
-            // Configurar encabezados para la respuesta HTTP
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_PDF);
             headers.setContentDispositionFormData("inline", "reporte_estadistico.pdf");
 
-            // Crear un recurso ByteArray para la respuesta
             ByteArrayResource resource = new ByteArrayResource(baos.toByteArray());
-
-            // Devolver una respuesta con el recurso y los encabezados
             return ResponseEntity.ok().headers(headers).body(resource);
 
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (Exception e) {
+            log.error("Error generando el reporte PDF para userId={}, houseId={}", userId, houseId, e);
             return ResponseEntity.status(500).body(null);
         }
     }
 
     private String obtenerFechaActual() {
-        SimpleDateFormat dateFormat = new SimpleDateFormat("dd 'de' MMMM 'del' yyyy", new Locale("es", "ES"));
+        SimpleDateFormat dateFormat = new SimpleDateFormat("dd 'de' MMMM 'del' yyyy", Locale.of("es", "ES"));
         return dateFormat.format(new Date());
     }
 
     private List<Receipt> obtenerUltimosRecibos(Long userId, Long houseId) {
-        // Obtener la fecha de inicio (hace dos meses desde la fecha actual)
         LocalDate startDate = LocalDate.now().minusMonths(2);
         Date startDateParam = Date.from(startDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
 
-        // Obtener la fecha de fin (fecha actual)
         LocalDate endDate = LocalDate.now();
         Date endDateParam = Date.from(endDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
 
@@ -360,15 +304,9 @@ public class StatisticService implements StatisticInterface {
         table.setWidth(UnitValue.createPercentValue(100));
         table.setTextAlignment(TextAlignment.CENTER);
 
-        // Agregar encabezados de la tabla
-        table.addCell(new Cell().add(new Paragraph("Receipt Name")));
-        table.addCell(new Cell().add(new Paragraph("Date")));
-        table.addCell(new Cell().add(new Paragraph("Amount")));
-        table.addCell(new Cell().add(new Paragraph("Price")));
-        table.addCell(new Cell().add(new Paragraph("Type Service")));
-        table.addCell(new Cell().add(new Paragraph("House Name")));
+        Stream.of("Receipt Name", "Date", "Amount", "Price", "Type Service", "House Name")
+                .forEach(header -> table.addCell(new Cell().add(new Paragraph(header))));
 
-        // Agregar filas con la información de los recibos
         for (Receipt receipt : lastTwoMonthsReceipts) {
             table.addCell(new Cell().add(new Paragraph(receipt.getReceiptName())));
             table.addCell(new Cell().add(new Paragraph(receipt.getDate().toString())));
@@ -380,5 +318,25 @@ public class StatisticService implements StatisticInterface {
 
         document.add(table);
     }
-    
+
+    /**
+     * Convierte un java.util.Date a LocalDate directamente vía epoch millis,
+     * sin pasar por texto. Reemplaza los distintos parseos manuales de
+     * String.valueOf(date) que había repetidos (y rotos) en el servicio.
+
+     * OJO: no se usa date.toInstant() a propósito. Cuando la fecha viene de
+     * Hibernate mapeada como columna DATE, en tiempo de ejecución llega como
+     * java.sql.Date (subclase de java.util.Date), y java.sql.Date sobreescribe
+     * toInstant() para lanzar UnsupportedOperationException, ya que
+     * conceptualmente no tiene componente de hora. getTime() sí es seguro en
+     * ambas subclases, así que construimos el Instant a partir de los millis.
+     */
+    private static LocalDate toLocalDate(Date date) {
+        return Instant.ofEpochMilli(date.getTime()).atZone(ZoneId.systemDefault()).toLocalDate();
+    }
+
+    private static String capitalizedSpanishMonth(Date date) {
+        String monthName = toLocalDate(date).getMonth().getDisplayName(TextStyle.FULL, Locale.forLanguageTag("es-ES"));
+        return monthName.substring(0, 1).toUpperCase() + monthName.substring(1);
+    }
 }
